--- a/CrecheApp/src/com/wesley/creche/client/desktop/Administration/AdministrationForm.form
+++ b/CrecheApp/src/com/wesley/creche/client/desktop/Administration/AdministrationForm.form
@@ -155,8 +155,11 @@
     </Component>
     <Component class="javax.swing.JButton" name="jButton7">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Change Role"/>
+        <Property name="text" type="java.lang.String" value="View children"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton7ActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
