--- a/CrecheApp/src/com/wesley/creche/client/desktop/Login/LoginForm.form
+++ b/CrecheApp/src/com/wesley/creche/client/desktop/Login/LoginForm.form
@@ -80,7 +80,7 @@
   <SubComponents>
     <Component class="javax.swing.JButton" name="jButton1">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Back"/>
+        <Property name="text" type="java.lang.String" value="Reset"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
