--- a/CrecheApp/src/com/wesley/creche/client/desktop/financeReports/finReportsForm.form
+++ b/CrecheApp/src/com/wesley/creche/client/desktop/financeReports/finReportsForm.form
@@ -23,25 +23,6 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="0" attributes="0">
-              <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="lblChild" linkSize="1" alignment="0" min="-2" max="-2" attributes="0"/>
-                  <Component id="lblStartDate" linkSize="1" alignment="0" min="-2" max="-2" attributes="0"/>
-                  <Component id="lblId" linkSize="1" alignment="0" min="-2" max="-2" attributes="0"/>
-                  <Component id="lblStatus" linkSize="1" alignment="0" min="-2" max="-2" attributes="0"/>
-                  <Component id="lblDue" linkSize="1" alignment="0" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace min="-2" pref="39" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="cbxChild" linkSize="3" min="-2" pref="166" max="-2" attributes="0"/>
-                  <Component id="txtChildId" linkSize="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="txtStartDate" linkSize="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="txtAccStatus" linkSize="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="txtDue" linkSize="3" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace pref="106" max="32767" attributes="0"/>
-          </Group>
           <Group type="102" alignment="1" attributes="0">
               <EmptySpace max="32767" attributes="0"/>
               <Component id="btnSubmit" linkSize="2" min="-2" max="-2" attributes="0"/>
@@ -49,12 +30,40 @@
               <Component id="btnClose" linkSize="2" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="21" max="-2" attributes="0"/>
           </Group>
+          <Group type="102" attributes="0">
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="lblChild" linkSize="1" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="lblStartDate" linkSize="1" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="lblId" linkSize="1" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="lblStatus" linkSize="1" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="lblDue" linkSize="1" alignment="0" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace min="-2" pref="39" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="cbxChild" linkSize="3" min="-2" pref="166" max="-2" attributes="0"/>
+                          <Component id="txtChildId" linkSize="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="txtStartDate" linkSize="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="txtAccStatus" linkSize="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="txtDue" linkSize="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                  </Group>
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="lblReports" min="-2" max="-2" attributes="0"/>
+                  </Group>
+              </Group>
+              <EmptySpace pref="106" max="32767" attributes="0"/>
+          </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="1" attributes="0">
-              <EmptySpace min="-2" pref="39" max="-2" attributes="0"/>
+              <Component id="lblReports" min="-2" pref="43" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="lblChild" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="cbxChild" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -164,6 +173,14 @@
     <Component class="javax.swing.JTextField" name="txtDue">
       <Properties>
         <Property name="text" type="java.lang.String" value="jTextField1"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="lblReports">
+      <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Century Gothic" size="24" style="1"/>
+        </Property>
+        <Property name="text" type="java.lang.String" value="Financial Reports"/>
       </Properties>
     </Component>
   </SubComponents>
