--- a/CrecheApp/src/com/wesley/creche/client/desktop/reports/Reports.form
+++ b/CrecheApp/src/com/wesley/creche/client/desktop/reports/Reports.form
@@ -92,6 +92,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Human Resources"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnHRActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnProgress">
       <Properties>
